sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: illegal start of simple pattern
  for (var i <- 1 to getNombreValeurs - 1)
       ^AlgInsertionSort:12: error: '<-' expected but '}' found.
} 
^